[더존비즈온] Cloud DX Academy/Terraform/예제파일/main_02.tf
provider "aws" {
        region = "us-east-2"
}

resource "aws_instance" "ubuntu1804" {
        ami = "ami-0c55b159cbfafe1f0"
        instance_type = "t2.micro"

        tags = {
                Name = "terraform-ubuntu1804"
        }
}
